Fix Popover not being fully visible on scroll bottom

--- a/client/src/components/pages/PokedexPage/PokedexPage.scss
+++ b/client/src/components/pages/PokedexPage/PokedexPage.scss
@@ -2,6 +2,8 @@
 
 .PokedexPage {
   text-align: center;
+
+  padding-bottom: 200px;
 }
 
 .Pokepedia-Header {
